--- a/app/views/issue_templates/_issue_template_control.html.erb
+++ b/app/views/issue_templates/_issue_template_control.html.erb
@@ -1,4 +1,5 @@
 <% html = capture do %>
+<% if @issue.new_record? %>
 <div class='insertTemplate' style="margin-bottom: 15px; margin-left: -180px;">
   <label style="margin-left: 0; margin-right: 5px;"><%= l(:label_issue_template_insert) %></label>
   <select id="template_selector">
@@ -6,6 +7,7 @@
   </select>
   <input type="button" value="<%= l(:label_issue_template_insert_button) %>" onclick="insertTemplate('template_selector', 'issue_description')"/>
 </div>
+<% end %>
 <% end %>
 
 <% javascript_tag do %>
