placing template field before issue description.

--- a/app/views/issue_templates/_issue_template_control.html.erb
+++ b/app/views/issue_templates/_issue_template_control.html.erb
@@ -1,6 +1,6 @@
 <% html = capture do %>
 <% if @issue.new_record? && IssueTemplate.count > 0 %>
-<div class='insertTemplate' style="margin-bottom: 15px; margin-left: -180px;">
+<div class='insertTemplate' style="margin-bottom: 15px; margin-left: 80px;">
 <% form_remote_tag :html => {:method => :get}, :url => { :controller => 'issue_templates', :action => 'show'} do %>
   <label style="margin-left: 0; margin-right: 5px;"><%= l(:label_issue_template_insert) %></label>
   <select id="template_selector" name="id" >
@@ -13,5 +13,5 @@
 <% end %>
 
 <% javascript_tag do %>
-  $('issue_description').insert({after: '<%= escape_javascript(html) %>'});
+  $('issue_description').insert({before: '<%= escape_javascript(html) %>'});
 <% end %>
